--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Specifies intentionally untracked files to ignore when using Git
 # http://git-scm.com/docs/gitignore
 
+# add node_modules to .gitignore
+node_modules/*
+
 *~
 *.sw[mnpcod]
 .tmp
